mpsoc_output/output/gpio_1214_26032026/test_gpio_negedge_intr_en/program.c
/* Autogenerated by Code_Generator Agent (IST 12:14 26-03-2026)
 * Source Test Case: test_gpio_negedge_intr_en
 */
#include "test_define.c"

extern volatile int int_pend;

void test_case(void)
{
    unsigned int test_err = 0;

#ifdef GPIO0
    GIC_EnableIRQ(87);
#endif
#ifdef GPIO1
    GIC_EnableIRQ(88);
#endif

#ifdef GPIO0
    write_reg(MIZAR_LSS_SYSREG_INTR_EN1, LSS_SYSREG_INTR_EN1_GPIO0_INTR);
#endif
#ifdef GPIO1
    write_reg(MIZAR_LSS_SYSREG_INTR_EN1, LSS_SYSREG_INTR_EN1_GPIO1_INTR);
#endif

    write_reg(0xA0243FFC, 0xFFFFFFFF);

    for (unsigned int i = 0; i < 32; ++i)
    {
        unsigned long addr1 = MIZAR_GPIO_GP0_GPIO_8 + (i * 4);
        write_reg(addr1, (1u<<20) | (1u<<18) | (1u<<16));
    }

    wait_on(10);

    for (unsigned int i = 0; i < 32; ++i)
    {
        unsigned int wr_val = (1u << i);
        write_reg(MIZAR_GPIO_GPIO_INTR_RAW_STCLR1, wr_val);
        write_reg(MIZAR_GPIO_GP0_INTR1_INTR_EN1,  wr_val);
        wait_on(10);

        int_pend = 1;
        write_reg(0xA0243FFC, 0xFFFFFFFF);
        write_reg(0xA0243FFC, ~wr_val);

        int timeout = 5000;
        while ((int_pend == 1) && (--timeout > 0)) {
            wait_on(10);
        }
        if (timeout == 0) {
            test_err++;
            break;
        }

        // prepare for next iteration
        write_reg(0xA0243FFC, 0xFFFFFFFF);
    }

    finish(test_err);
}

void Default_IRQHandler(void)
{
    extern unsigned int i; // test loop index (platform-specific visibility)
    unsigned int raddr = MIZAR_GPIO_GP0_GPIO_8 + (i * 4);
    unsigned int rdata = read_reg(raddr);
    unsigned int local_wr = (1u << i);

    int_pend = 0;

    if ((rdata & 0x1u) != 0) {
        // error: edge expected negedge, input bit should be 0
        // counted in caller via test_err
    }

    if ((rdata & 0x2u) != 0x0u) {
        unsigned int rdata_grp = read_reg(MIZAR_GPIO_GP0_INTR1_INTR_STS1);
        if ((rdata_grp & local_wr) == 0) {
            // group did not reflect per-pin event
        }
    }

    write_reg(MIZAR_GPIO_GP0_GPIO_8 + (i * 4), (1u<<20) | (1u<<16));
    write_reg(MIZAR_GPIO_GPIO_INTR_RAW_STCLR1, local_wr);

#ifdef GPIO0
    write_reg(MIZAR_LSS_SYSREG_RAW_STCR1, LSS_SYSREG_RAW_STCR1_GPIO0_INTR);
    GIC_ClearIRQ(87);
#endif
#ifdef GPIO1
    write_reg(MIZAR_LSS_SYSREG_RAW_STCR1, LSS_SYSREG_RAW_STCR1_GPIO1_INTR);
    GIC_ClearIRQ(88);
#endif
}
